# pico-2-workshop-2026

./: .gitattributes  Cargo.toml  README.md  do.py
.cargo/: config.toml
00-setup/: Cargo.toml  README.md
00-setup/src/: main.rs
000-intro/: introduction.html
01-multicolor-led/: Cargo.toml  LED_only.fzz  Pins_LED.excalidraw  README.md  Schematic_LED.excalidraw
01-multicolor-led/example/: Cargo.toml
01-multicolor-led/example/src/: main.rs
01-multicolor-led/src/: main.rs
02-distance-light/: Cargo.toml  README.md  Wire_APDS.fzz
02-distance-light/example/: Cargo.toml
02-distance-light/example/src/: main.rs
02-distance-light/src/: main.rs
03-wifi/: Cargo.toml  README.md  rust-toolchain.toml
03-wifi/example/: Cargo.toml
03-wifi/example/src/: led.rs  led_controller.rs  main.rs
03-wifi/src/: led.rs  led_controller.rs  main.rs  mk_static.rs  webserver.rs
99-further-examples/gesture-toggle-lamp/: Cargo.toml  README.md
99-further-examples/gesture-toggle-lamp-interrupt/: Cargo.toml  README.md
99-further-examples/gesture-toggle-lamp-interrupt/src/: main.rs
99-further-examples/gesture-toggle-lamp/src/: main.rs
99-further-examples/nightlight/: Cargo.toml  README.md
99-further-examples/nightlight/src/: main.rs
99-further-examples/wifi-ble/: Cargo.toml  README.md
99-further-examples/wifi-ble/src/: ble.rs  led.rs  led_controller.rs  main.rs  mk_static.rs
datasheets/: APDS-9960.md  LED.md
esp32c3-hello-world/: Cargo.toml  README.md
esp32c3-hello-world/src/: main.rs
esp32c3-wifi-ble-controlled-led/: Cargo.toml  README.md
esp32c3-wifi-ble-controlled-led/src/: ble.rs  led.rs  led_controller.rs  main.rs  webserver.rs  wifi.rs
intro-slides/: introduction.html
pinetime-ble-led-controller/: Cargo.toml  README.md  build.rs  flash-softdevice.py  memory.x
pinetime-ble-led-controller/src/: main.rs
rp2350-apds9960-distance-light/: Cargo.toml
rp2350-apds9960-distance-light/src/: main.rs
rp2350-apds9960-nightlight/: Cargo.toml
rp2350-apds9960-nightlight/src/: main.rs
rp2350-apds9960-toggle-lamp/: Cargo.toml
rp2350-apds9960-toggle-lamp-interrupt/: Cargo.toml
rp2350-apds9960-toggle-lamp-interrupt/src/: main.rs
rp2350-apds9960-toggle-lamp/src/: main.rs
rp2350-hello-world/: Cargo.toml
rp2350-hello-world/src/: main.rs
rp2350-wifi-ble-controlled-led/: Cargo.toml
rp2350-wifi-ble-controlled-led/src/: ble.rs  led.rs  led_controller.rs  main.rs  webserver.rs
