[package]
name = "esp32c3-hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
esp-backtrace = { version = "0.16", features = ["exception-handler", "panic-handler", "println", "esp32c3"] }
esp-bootloader-esp-idf = "0.1"
esp-hal = { version = "1.0.0-beta.1", features = ["log-04", "esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.8", features = ["esp32c3"] }
esp-println = { version = "0.14", features = ["log-04", "esp32c3"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false