[package]
name = "esp32c3-wifi-ble-controlled-led"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = "0.7.0"
embassy-futures = "0.1"
embassy-net = { version = "0.7.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = "0.7"
embassy-time = "0.4.0"
embedded-hal = "1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8"
esp-backtrace = { version = "0.16", features = ["exception-handler", "panic-handler", "println", "esp32c3"] }
esp-bootloader-esp-idf = "0.1"
esp-hal = { version = "1.0.0-beta.1", features = ["log-04", "esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.8", features = ["esp32c3"] }
esp-println = { version = "0.14", features = ["log-04", "esp32c3"] }
esp-wifi = { version = "0.14", features = ["log-04", "esp32c3", "wifi", "ble"] }
picoserve = { version = "0.16", features = ["embassy"] }
static_cell = "2"
trouble-host = { version = "0.2", features = ["peripheral", "gatt", "derive"] }