[package]
edition = "2024"
name = "rp2350-wifi-ble-controlled-led"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1"
embassy-net = { version = "0.7.1", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1"
embedded-hal-async = "1"

static_cell = "2"

picoserve = { version = "0.16", features = ["embassy"] }

trouble-host = { git = "https://github.com/embassy-rs/trouble", features = ["peripheral", "gatt", "derive", "defmt"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false